w10/k8s/app/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lecture-10-api
  namespace: lecture-10
  labels:
    app: lecture-10-api
spec:
  type: NodePort
  selector:
    app: lecture-10-api
  ports:
    - name: http
      port: 5010
      targetPort: http
      nodePort: 30080
