w10/k8s/app/04-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: lecture-10-api-ingress
  namespace: lecture-10
spec:
  podSelector:
    matchLabels:
      app: lecture-10-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 5010
